# CFDS_HW5

./: README.md  hw5-manzi.py  hw5.py  main.py  pyproject.toml
best_library/data/: load_data.py
best_library/feature/: __init__.py  base_feature.py  transform1.py  transform2.py
best_library/model/: model.py
best_library/preprocessor/: __init__.py  fill_Nan.py  remove_rows.py
notebook/: analysis_best_library.ipynb
src/best_library/: __init__.py  base.py  hw4.py  hw5.py
src/best_library/data/: __init__.py
src/best_library/feature/: __init__.py  transform1.py  transform2.py
src/best_library/model/: model.py
src/best_library/preprocessor/: remove_rows.py
test/: test_hw4.py  test_hw5.py
